2003-06-24  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): new function, extracted from
	nobject_out() to do all the recursive work
	(nobject_out): call it; now nobject_out() does fflush() and
	begin_system_call()/end_system_call() just once

2003-06-23  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (alloca) [UNIX_CYGWIN32]: use __builtin_alloca()

2003-06-19  Sam Steingold  <sds@gnu.org>

	* type.lisp (canonicalize-type): canonicalize (VECTOR NIL) correctly
	* predtype.d (CLASS-OF): handle (ARRAY NIL) correctly
	* describe.lisp (describe-object): report (ARRAY NIL)
	as having no storage
	* io.d (pr_array): print (ARRAY NIL NIL) properly

2003-06-19  Sam Steingold  <sds@gnu.org>

	added (SETF WEAK-POINTER-VALUE)
	* spvw_garcol.d (gar_col_normal): when the value of the weak
	pointer is GC-invariant, remove it from O(all_weakpointers)
	* lispbibl.d (weakpointer_broken_p): depend on wp_value (not wp_cdr)
	* record.d (mk_weakpointer): wp_cdr for GC-invariant values is unbound
	(MAKE-WEAK-POINTER, WEAK-POINTER-P, WEAK-POINTER-VALUE): fixed seclass
	(check_weak_pointer): new function
	(WEAK-POINTER-VALUE): use it
	(%SET-WEAK-POINTER-VALUE): implemented
	* constsym.d, subr.d (set_weak_pointer_value): added
	* places.lisp (WEAK-POINTER-VALUE): added defsetf

2003-06-15  Sam Steingold  <sds@gnu.org>

	* spvw.d (main) [WIN32_NATIVE]: permit `-K'
	clisp-link.sh now works on mingw

2003-06-13  Sam Steingold  <sds@gnu.org>

	* stream.d (make_file_stream): do not push :PROBE streams onto
	O(open_files) because that would prevent deleting this file and
	:PROBE streams do not have to be closed anyway

2003-06-13  Sam Steingold  <sds@gnu.org>

	* makemake.in [win32gcc]: build lisp.a on mingw and do stage
	comparison (make check) unix-style, not dos-style
	* configure [cygwin/mingw]: work around the _WinMain@16 libcharset
	problem with --enable-shared=no;  this is a FIXME for Bruno

2003-06-13  Sam Steingold  <sds@gnu.org>
